style changes to blockquote etc

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
             <li>OpenGLES to apply RealTime filters</li>
          </ul>
          <div class="row">
-         <div class="col-md-2">
-            <div class="linkBox">
+         <div class="col-md-1">
+         </div>
+         <div class="col-md-3">
+            <div class="linkBox" id="githubIcon">
                <img src="projects/vZine/github.png" class="img-responsive" alt="Responsive image"/>
-               <p class="caption"><a href="https://github.com/dennyabrain/InstagramTitles">Source Code</a></p>
             </div>
          </div>
-         <div class="col-md-2">
-            <div class="linkBox">
-               <img src="projects/vZine/icon.png" class="img-responsive" alt="Responsive image"/>
-               <p class="caption"><a href="https://play.google.com/store/apps/details?id=dennymades.space.veeZine">Install</a></p>
+         <div class="col-md-8">
+            <div class="linkBox" id="googlePlayBox">
+               <a href='https://play.google.com/store/apps/details?id=dennymades.space.veeZine&hl=en&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
             </div>
          </div>
    </div>
@@ -78,12 +78,12 @@
    <div class="row">
    		<div class="col-md-4">
    			<img src="projects/vZine/1_optimized.gif" class="img-responsive gifBox" alt="Responsive image">
-   			<p class="caption">Click to Launch a 10 second timer and record video</p>
+   			<p class="caption">Click Record to launch a 10 second timer</p>
    		</div>
 
    		<div class="col-md-4">
-   			<img src="projects/vZine/2__optimized.gif" class="img-responsive gifBox" alt="Responsive image">
-   			<p class="caption">Tap on Text to change Font and Long Press to change color</p>
+   			<img src="projects/vZine/ktown.gif" class="img-responsive gifBox" alt="Responsive image">
+   			<p class="caption">example filter in action</p>
    		</div>
 
    		<div class="col-md-4">
@@ -109,29 +109,31 @@
             </div>
          </div>
       </div>
-      <div class="col-md-4" id="instagramBox">
-         <h1> Do Androids Dream of Me? </h1>
-         <img src="projects/android-dreams/cover.gif" class="img-responsive gifBox" alt="Responsive image">
-         <p>
-         an instagram log of my experiments with android.
-         </p>
-      </div>
+      <a href="https://www.instagram.com/doandroidsdreamofme/">
+         <div class="col-md-4" id="instagramBox">
+            <h1> Do Androids Dream of Me? </h1>
+            <img src="projects/android-dreams/cover2.gif" class="img-responsive" alt="Responsive image">
+            <blockquote>
+            an instagram log of my experiments with android.
+            </blockquote>
+         </div>
+      </a>
    </div>
 
    <div class="row">
       <div class="col-md-6">
          <h1>3. Dhish</h1>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/yvUFGLoQxfI" frameborder="0" allowfullscreen></iframe>
-         <p>
+         <blockquote>
          Dhish is a wearable music instrument. It aims to capture familiar percussive gestures of the hands like clapping and snapping and associate new sounds to them. Dhish was built with the the intention to create an electronic music instrument that isn't intimidating and is easy to pick up for amateur musicians.
-         </p>
+         </blockquote>
       </div>
       <div class="col-md-6">
          <h1>4. Dhvani</h1>
          <iframe src="https://player.vimeo.com/video/67862157" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-         <p>
-         Dhvani is a tabletop touch based interface to create electronic music. It was inspired by the Reactable project to create it. When Reactable was released it was way above my budget, which motivated me to create a low-fi version of it.
-         </p>
+         <blockquote>
+         Dhvani is a tabletop touch based interface to create electronic music. It was inspired by the Reactable project.
+         </blockquote>
       </div>
       <div class="col-md-6">
       </div>
@@ -140,7 +142,7 @@
    <hr>
    <div class="row">
    		<div class="col-md-12 right-align">
-   			<p>on the internet you can find me here, here and here</p>
+   			<p></p>
    		</div>
    </div>
 </div>
