--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <div class="row">
 		<div class="col-md-6">
 			<blockquote>
-				veeZine lets you record 10 second videos and apply quirky filters over it.
+				veeZine lets you record 10 second videos and apply <em>filters that respond to sound</em>.
             Current version supports filters that respond to audio.
             veeZine works as a great complementary app to create stylish videos for Instagram Stories.            
 			</blockquote>
@@ -102,7 +102,7 @@
                <img src="projects/2/thumbnail2.gif" class="img-responsive gifBox" alt="Responsive image">
             </div>
             <div class="col-md-6">
-               <blockquote>Alone with my Phone is a first person audio story that you participate in using your smartphone. The companion app reveals characters and their voices to you as you physically move from one place to the other.
+               <blockquote>Alone with my Phone is a first person <em>interactive audio story</em> that you participate in using your smartphone. The companion app reveals characters and their voices to you as you physically move from one place to the other.
                It is a story about the character's reliance on technology to initiate contact with humans and the disappointments that come with it.</blockquote>
                <h3>Technical Details </h3>
                <p>I used the Places API to randomly select 3 places around you. Using Geofences enable users to experience different characters of the story depending on their location. Using the orientation class the user is able to perform certain gestures with the phone to trigger the character's voice.</p>
@@ -114,7 +114,7 @@
             <h1> Do Androids Dream of Me? </h1>
             <img src="projects/android-dreams/cover2.gif" class="img-responsive" alt="Responsive image">
             <blockquote>
-            an instagram log of my experiments with android.
+            an <em>instagram log</em> of my experiments with android.
             </blockquote>
          </div>
       </a>
@@ -125,14 +125,14 @@
          <h1>3. Dhish</h1>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/yvUFGLoQxfI" frameborder="0" allowfullscreen></iframe>
          <blockquote>
-         Dhish is a wearable music instrument. It aims to capture familiar percussive gestures of the hands like clapping and snapping and associate new sounds to them. Dhish was built with the the intention to create an electronic music instrument that isn't intimidating and is easy to pick up for amateur musicians.
+         Dhish is a <em>wearable music instrument</em>. It aims to capture familiar percussive gestures of the hands like clapping and snapping and associate new sounds to them. Dhish was built with the the intention to create an electronic music instrument that isn't intimidating and is easy to pick up for amateur musicians.
          </blockquote>
       </div>
       <div class="col-md-6">
          <h1>4. Dhvani</h1>
          <iframe src="https://player.vimeo.com/video/67862157" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
          <blockquote>
-         Dhvani is a tabletop touch based interface to create electronic music. It was inspired by the Reactable project.
+         Dhvani is a <em>tabletop touch based interface</em> to create electronic music. It was inspired by the Reactable project.
          </blockquote>
       </div>
       <div class="col-md-6">
