--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
          </div>
          <div class="col-md-3">
             <div class="linkBox" id="githubIcon">
-               <img src="projects/vZine/github.png" class="img-responsive" alt="Responsive image"/>
+               <a href="https://github.com/dennyabrain/InstagramTitles" target="_blank">
+                  <img src="projects/vZine/github.png" class="img-responsive" alt="Responsive image"/>
+               </a>
             </div>
          </div>
          <div class="col-md-8">
