--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                <img src="projects/2/thumbnail2.gif" class="img-responsive gifBox" alt="Responsive image">
             </div>
             <div class="col-md-6">
-               <blockquote>Alone with my Phone is a first person <em>interactive audio story</em> that you participate in using your smartphone. The app reveals characters and their voices to you as you physically move from one place to the other.
-               It is a story about the character's reliance on technology to initiate contact with humans and the disappointments that come with it.</blockquote>
+               <blockquote>Alone with my Phone is a first person <em>interactive audio story</em> that you participate in using your smartphone. The app reveals different character's voices depending on your location in the city.
+               It is a story about the our reliance on technology to initiate contact with others and the disappointments that come with it.</blockquote>
                <h3>Technical Details </h3>
-               <p>I used the Places API to randomly select 3 places around you. Using Geofences enable users to experience different characters of the story depending on their location. Using the Orientation class the user is able to perform certain gestures with the phone to trigger the character's voice.</p>
+               <p>The app uses the Places API to select 3 locations around you and Geofences to trigger audio. Using the Orientation class the user is able to perform certain gestures with the phone and communicate with the characters</p>
                <a href="https://youtu.be/U4i7V_H628E" target="_blank"><p>Watch an excerpt of a user experiencing the story)</p></a>
             </div>
          </div>
